feat: export a dev function that folks can use in their own scripts to invoke wrangler dev

--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -7,6 +7,7 @@
     "wrangler": "./bin/wrangler.js",
     "wrangler2": "./bin/wrangler.js"
   },
+  "main": "wrangler-dist/cli.js",
   "license": "MIT OR Apache-2.0",
   "bugs": {
     "url": "https://github.com/cloudflare/wrangler2/issues"
